Fixed some issues with text overflow

--- a/BeyondResponsiveDesign/styles/styles.less
+++ b/BeyondResponsiveDesign/styles/styles.less
@@ -66,14 +66,13 @@ body > header {
     }
 
     > ul {
-        float: left;
         height: @header-height;
         margin: 0;
 
         > li {
             line-height: @header-height;
             height: @header-height;
-            display: inline-block;
+            display: inline;
 
             &.menuToggle {
                 display: none;
