--- a/BeyondResponsiveDesign/styles/theme.less
+++ b/BeyondResponsiveDesign/styles/theme.less
@@ -180,20 +180,25 @@ body > header {
     }
 
     > ul {
-        float: left;
         color: @header-text-color;
         margin: 0;
         padding: 0;
         list-style-type: none;
         white-space: nowrap;
-        
+
+        &:not(.headerIcons) {
+          margin-right: 2em;
+        }
+
         &.headerIcons {
-            float: right;
+            position: absolute;
+            right: 0;
+            bottom: 0;
         }
 
         > li {
+            overflow: hidden;
             position: relative;
-            float: left;
             margin: 0;
             white-space: nowrap;
             text-align: left;
@@ -204,6 +209,8 @@ body > header {
             font-size: 1em;
 
             > h2 {
+                overflow: hidden;
+                text-overflow: ellipsis;
                 color: @header-text-color;
                 font-weight: @bold;
             }
@@ -433,7 +440,7 @@ body > main {
             }
 
             > span {
-                padding: 0 3.75rem 0 1rem;
+                padding: 0 0 0 1rem;
                 font-weight: 400;
                 font-size: 1.125rem;
                 text-indent: 0;
